<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Speak Out</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Main</string>
    <string name="title_section2">Library</string>
    <string name="title_section3">Section 3</string>

    <!-- action bar -->
    <string-array name="action_bar_speak_list">
        <item>Sequence Speak</item>
        <item>Random Speak</item>
    </string-array>

    <!-- main view fragment -->
    <string name="mainv_view_tips">Good Good Study, Day Day Up!</string>
    <string name="main_view_quick_insert">insert a new item quickly</string>
    <string name="main_view_quick_insert_edittext_content_tips">content</string>
    <string name="main_view_quick_insert_button_clear">clear</string>
    <string name="main_view_quick_insert_button_insert">insert</string>
    <string name="main_view_quick_practise_button">Speak Out \n Right Now!!!</string>
    <string name="main_view_quick_insert_content_invalid">content is invalid</string>
    <string name="main_view_quick_insert_content_done">insert content done</string>

    <!-- library list view fragment -->
    <string name="library_list_view_sumary">Total items: </string>
    <string name="library_list_view_context_menu_view">view</string>
    <string name="library_list_view_context_menu_delete">delete</string>

    <!-- voice recongnition -->
    <string name="voice_recognition">App/Voice Recognition</string>
    <string name="supported_languages">Supported languages</string>
    <string name="language_preference">Voice Search in Settings</string>
    <string name="voice_recognition_answer_dialog_correct">Well Done!</string>
    <string name="voice_recognition_answer_dialog_correct_message">You are genuis!</string>
    <string name="voice_recognition_answer_dialog_wrong">Oh</string>
    <string name="voice_recognition_answer_dialog_wrong_message">Congratulations, wrong answer</string>
    <string name="voice_recognition_answer_dialog_rest">Have a rest!</string>
    <string name="voice_recognition_answer_dialog_once_again">once again?</string>
    <string name="voice_recognition_answer_dialog_next">next question!</string>
    <string name="voice_recognition_answer_dialog_let_go">Let\'s go!</string>
    <string name="voice_recognition_result_list_tips">Voice recognition result: </string>
    <string name="voice_recognition_question_tips">Question: </string>
    <string name="voice_recognition_answer_tips">Answer: </string>

    <!-- view question item activity -->
    <string name="question_item_activity_name">View item</string>
    <string name="question_item_activity_id">id:</string>
    <string name="question_item_activity_content">content:</string>
    <string name="question_item_activity_common_level">Common level:</string>
    <string name="question_item_activity_favor">favor:</string>
    <string name="question_item_activity_created_date">created date:</string>
    <string name="question_item_activity_practise_count">practise count:</string>
    <string name="question_item_activity_last_practise_date">last practise date:</string>
    <string name="question_item_activity_wrong_count">wrong count:</string>

    <!-- ============================== -->
    <!-- app/voice recognition examples strings -->
    <!-- ============================== -->

    <string name="voice_recognition_prompt">This activity demonstrates the voice recognition APIs.</string>
    <string name="speak_button_sequence">Sequence Speak! Click to start!</string>
    <string name="speak_button_random">Random Speak! Click to start</string>
    <string name="voice_recognition_results">Results:</string>

</resources>