<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <RelativeLayout
        android:id="@+id/main_view_tips_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_vertical_margin"
        android:background="@drawable/radius_bg"
        android:padding="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/main_view_tips"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_view_quick_insert_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_view_tips_layout"
        android:layout_margin="@dimen/view_vertical_margin"
        android:background="@drawable/radius_bg"
        android:padding="@dimen/view_vertical_margin" >

        <TextView
            android:id="@+id/main_view_quick_insert_tips"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_view_quick_insert" />

        <EditText
            android:id="@+id/main_view_quick_insert_edittext_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_view_quick_insert_tips"
            android:hint="@string/main_view_quick_insert_edittext_content_tips"
            android:inputType="textMultiLine"
            android:maxLines="5" />

        <LinearLayout
            android:id="@+id/clear_insert_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_view_quick_insert_edittext_content"
            android:background="@drawable/radius_bg"
            android:gravity="center" >

            <Button
                android:id="@+id/main_view_quick_insert_button_clear"
                android:layout_width="@dimen/main_view_common_button_width"
                android:layout_height="wrap_content"
                android:hint="@string/main_view_quick_insert_button_clear" />

            <Button
                android:id="@+id/main_view_quick_insert_button_insert"
                android:layout_width="@dimen/main_view_common_button_width"
                android:layout_height="wrap_content"
                android:hint="@string/main_view_quick_insert_button_insert" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_view_speak_out_button_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_view_quick_insert_layout"
        android:layout_margin="@dimen/view_vertical_margin"
        android:background="@drawable/radius_bg"
        android:padding="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:id="@+id/speak_out_button_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/main_view_quick_practise_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:hint="@string/main_view_quick_practise_button"
                android:padding="5dp"
                android:src="@drawable/google_play" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>