<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2008 Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->


<!-- This activity displays UI for launching voice recognition -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/voice_recognition_prompt_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/view_vertical_margin"
        android:layout_weight="1"
        android:background="@drawable/radius_bg"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voice_recognition_prompt" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/voice_recognition_result_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/view_vertical_margin"
        android:layout_weight="3"
        android:background="@drawable/radius_bg"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/voice_recognition_result_list_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voice_recognition_result_list_tips" />

        <ListView
            android:id="@+id/voice_recognition_result_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/voice_recognition_result_imageview_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/view_vertical_margin"
        android:layout_weight="4"
        android:background="@drawable/radius_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/view_vertical_margin" >

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/view_vertical_margin"
                            android:layout_weight="1"
                            android:text="@string/voice_recognition_question_tips" />

                        <TextView
                            android:id="@+id/voice_recognition_result_question"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/view_vertical_margin"
                            android:layout_weight="3" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/view_vertical_margin"
                            android:layout_weight="1"
                            android:text="@string/voice_recognition_answer_tips" />

                        <TextView
                            android:id="@+id/voice_recognition_result_answer"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/view_vertical_margin"
                            android:layout_weight="3" />
                    </TableRow>
                </TableLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/voice_recognition_result_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/voice_recognition_answer_dialog_correct"
                android:src="@drawable/correct" />

            <TextView
                android:id="@+id/voice_recognition_result_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/view_horizontal_margin"
                android:text="@string/voice_recognition_answer_dialog_correct_message" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_speak_out_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/view_horizontal_margin"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_once_again"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/view_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/voice_recognition_answer_dialog_once_again" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_vertical_margin"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/voice_recognition_answer_dialog_let_go" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>